# DNA-Assembly-Problem-Solver

./: .gitignore  CMakeLists.txt  README.md  config.cfg  debug_instance.txt  debug_output.txt  debug_profiling_report.csv  display_manager.py  log.txt  sbh_framework.log.1  sbh_testing_framework.py  valgrind_log.txt  valgrind_output.txt
config/: config.cfg
google_tests/: CMakeLists.txt
google_tests/tests/: base_test.h  test_main.cpp  your_tests.cpp
google_tests/tests/configuration/: genetic_algorithm_configuration_test.cpp
google_tests/tests/crossovers/: cycle_crossover_test.cpp  edge_recombination_crossover_test.cpp  order_crossover_test.cpp  pmx_crossover_test.cpp
google_tests/tests/dna_tests/: dna_generator_test.cpp  dna_instance_builder_test.cpp  dna_instance_io_test.cpp  dna_instance_test.cpp  error_introduction_test.cpp  spectrum_generator_test.cpp
google_tests/tests/fitness/: optimized_graph_based_fitness_test.cpp
google_tests/tests/metaheuristics/: adaptive_crossover_test.cpp  adaptive_mutation_test.cpp
google_tests/tests/utils_tests/: logger_test.h  random_test.cpp
include/: common.h
include/benchmark/: adaptive_crossover_benchmark.h  crossover_benchmark.h  naive_benchmark.h
include/config/: genetic_config.h
include/configuration/: genetic_algorithm_configuration.h
include/dna/: dna_generator.h  dna_instance.h  dna_instance_builder.h  dna_instance_io.h  error_introduction.h  spectrum_generator.h
include/generator/: dna_generator.h  spectrum_generator.h
include/interfaces/: i_algorithm.h  i_benchmark.h  i_crossover.h  i_fitness.h  i_mutation.h  i_population_cache.h  i_replacement.h  i_representation.h  i_selection.h  i_stopping.h
include/io/: instance_io.h
include/metaheuristics/: adaptive_crossover.h  adaptive_mutation.h  concrete_fitness.h  crossover.h  crossover_impl.h  dna_utils.h  edge_table.h  fitness.h  fitness_impl.h  ga_config.h  genetic_algorithm.h  genetic_algorithm_configuration.h  genetic_algorithm_runner.h  individual.h  mutation.h  mutation_impl.h  path_analyzer.h  population_cache.h  population_cache_impl.h  preprocessed_edge.h  replacement.h  replacement_impl.h  representation.h  representation_impl.h  selection.h  selection_impl.h  simple_fitness.h  stopping_criteria.h  stopping_criteria_impl.h
include/naive/: naive_reconstruction.h
include/tuning/: meta_ea.h  parameter_tuning_manager.h  parameters.h  parameters_parser.h  racing.h  tuning_structures.h
include/utils/: logging.h  performance_profilling_framework.h  random.h  timer.h  utility_functions.h  zobrist_hasher.h
scripts/: build_wsl.sh  sbh_testing_framework.py
src/: main.cpp
src/benchmark/: adaptive_crossover_benchmark.cpp  crossover_benchmark.cpp  naive_benchmark.cpp
src/configuration/: genetic_algorithm_configuration.cpp
src/dna/: dna_generator.cpp  dna_instance.cpp  dna_instance.h  dna_instance_builder.cpp  dna_instance_io.cpp  error_introduction.cpp  spectrum_generator.cpp
src/generator/: dna_generator.cpp  spectrum_generator.cpp
src/metaheuristics/: adaptive_crossover.cpp  crossover.cpp  crossover_impl.cpp  edge_table.cpp  fitness.cpp  fitness_impl.cpp  genetic_algorithm.cpp  genetic_algorithm.h  genetic_algorithm_runner.cpp  individual.cpp  mutation.cpp  mutation_impl.cpp  path_analyzer.cpp  permutation_representation.cpp  population_cache.cpp  replacement.cpp  representation.cpp  representation_impl.cpp  selection.cpp  selection_impl.cpp  simple_fitness.cpp  stopping_criteria.cpp  stopping_criteria_impl.h
src/naive/: naive_reconstruction.cpp
src/tuning/: parameter_parser.cpp  parameter_tuning_manager.cpp  tuning_structures.cpp
src/utils/: logging.cpp  performance_profilling_framework.cpp  utility_functions.cpp
tests/: CMakeLists.txt  test_dna_generator.cpp  test_dna_instance.cpp  test_dna_instance_builder.cpp  test_dna_instance_io.cpp  test_error_introduction.cpp  test_genetic_algorithm.cpp  test_individual.cpp  test_random.cpp  test_representation.cpp  test_spectrum_generator.cpp
tests/configs/: config_3.cfg
tools/: build.sh
tools/valgrind/: VALGRIND_README.md  build_and_run_valgrind.sh  build_valgrind.cmake  configure_valgrind_build.ps1  log.txt  run_in_wsl.sh  run_valgrind.ps1  run_valgrind.sh  run_valgrind_wsl.ps1
